--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mattprindible/foi#readme",
   "dependencies": {
+    "@11ty/eleventy": "^0.12.1",
     "airtable": "^0.10.1",
     "dotenv": "^8.2.0"
   }
